# HephAudio

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  HephAudio.sln  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_android.yml  build_linux.yml  build_windows.yml  doxygen.yml  github_pages.yml  jekyll-gh-pages.yml  static.yml
Android1/Android1.NativeActivity/: Android1.NativeActivity.vcxproj  main.cpp
Android1/Android1.Packaging/: Android1.Packaging.androidproj  AndroidManifest.xml
AndroidDemo/AndroidDemo.NativeActivity/: AndroidDemo.NativeActivity.vcxproj  main.cpp
AndroidDemo/AndroidDemo.Packaging/: AndroidDemo.Packaging.androidproj  AndroidManifest.xml
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
ConsoleApplicationLinux/: ConsoleApplicationLinux.vcxproj  main.cpp
HephAudio/: ALawCodec.cpp  ALawCodec.h  AacFormat.cpp  AacFormat.h  AiffFormat.cpp  AiffFormat.h  AndroidAudio.cpp  AndroidAudio.h  AndroidAudioA.cpp  AndroidAudioA.h  AndroidAudioBase.cpp  AndroidAudioBase.h  AndroidAudioSLES.cpp  AndroidAudioSLES.h  AppleAudio.cpp  AppleAudio.h  Audio.cpp  Audio.h  AudioBuffer.cpp  AudioBuffer.h  AudioCaptureEventArgs.cpp  AudioCaptureEventArgs.h  AudioCodecManager.cpp  AudioCodecManager.h  AudioDevice.h  AudioDeviceEventArgs.cpp  AudioDeviceEventArgs.h  AudioEvent.cpp  AudioEvent.h  AudioEventArgs.cpp  AudioEventArgs.h  AudioEventResult.h  AudioException.cpp  AudioException.h  AudioExceptionEventArgs.cpp  AudioExceptionEventArgs.h  AudioFile.cpp  AudioFile.h  AudioFileFormatManager.cpp  AudioFileFormatManager.h  (+158 more)
HephAudio/HeaderFiles/: Audio.h  AudioBuffer.h  AudioChannelLayout.h  AudioChannelMixingLookupTables.h  AudioDevice.h  AudioFormatInfo.h  AudioObject.h  AudioPlaylist.h  AudioProcessor.h  AudioStream.h  EchoInfo.h  EncodedAudioBuffer.h  EncodedBufferInfo.h  EqualizerInfo.h  HephAudioShared.h  IAudioDecoder.h  IAudioEncoder.h  RoomImpulseResponse.h  Spatializer.h  int24.h
HephAudio/SourceFiles/: Audio.cpp  AudioBuffer.cpp  AudioChannelLayout.cpp  AudioChannelMixingLookupTables.cpp  AudioDevice.cpp  AudioFormatInfo.cpp  AudioObject.cpp  AudioPlaylist.cpp  AudioProcessor.cpp  AudioStream.cpp  EchoInfo.cpp  EncodedAudioBuffer.cpp  EqualizerInfo.cpp  HephAudioShared.cpp  IAudioDecoder.cpp  RoomImpulseResponse.cpp  Spatializer.cpp  int24.cpp
HephAudioDLL/: HephAudioDLL.vcxproj
HephAudioSO/: HephAudioSO.cpp  HephAudioSO.h  HephAudioSO.vcxproj  HephAudioSO.vcxproj.filters  pch.h
HephCommon/: ConsoleLogger.cpp  ConsoleLogger.h  HephCommon.vcxitems  HephCommon.vcxitems.filters  HephCommonFramework.h  HephException.cpp  HephException.h  StopWatch.cpp  StopWatch.h  StringBuffer.cpp  StringBuffer.h
HephCommon/Header Files/: Color.h  ColorBuffer.h  Complex.h  ComplexBuffer.h  ConsoleLogger.h  File.h  FloatBuffer.h  Guid.h  HephCommonFramework.h  HephException.h  HephMath.h  StopWatch.h  StreamStatus.h  StringBuffer.h  Vector.h  XmlStream.h
HephCommon/HeaderFiles/: BitStream.h  Color.h  ColorBuffer.h  Complex.h  ComplexBuffer.h  ConsoleLogger.h  CsvStream.h  Event.h  EventArgs.h  EventParams.h  EventResult.h  Exception.h  File.h  FloatBuffer.h  Fourier.h  Guid.h  HephCommonFramework.h  HephCommonShared.h  HephException.h  HephMath.h  HephShared.h  HephTypeTraits.h  JsonStream.h  Matrix.h  Simd.h  StopWatch.h  Stopwatch.h  StreamHelpers.h  StreamStatus.h  StringBuffer.h  StringHelpers.h  UserEventArgs.h  Vector.h  XmlStream.h
HephCommon/Source Files/: BitStream.cpp  ComplexBuffer.cpp  ConsoleLogger.cpp  CsvStream.cpp  File.cpp  FloatBuffer.cpp  HephException.cpp  JsonStream.cpp  Matrix.cpp  StopWatch.cpp  StreamHelpers.cpp  StringBuffer.cpp
HephCommon/SourceFiles/: BitStream.cpp  Complex.cpp  ComplexBuffer.cpp  ConsoleLogger.cpp  CsvStream.cpp  Event.cpp  EventResult.cpp  Exception.cpp  File.cpp  FloatBuffer.cpp  Fourier.cpp  Guid.cpp  HephCommonFramework.cpp  HephCommonShared.cpp  HephException.cpp  HephShared.cpp  JsonStream.cpp  Matrix.cpp  Simd.cpp  StopWatch.cpp  Stopwatch.cpp  StreamHelpers.cpp  StringBuffer.cpp  StringHelpers.cpp  UserEventArgs.cpp  XmlStream.cpp
dependencies/pocketfft/: pocketfft_hdronly.h
docs/: AudioDevice.md  AudioFormatInfo.md  AudioObject.md  Doxyfile  HephAudioFramework.md  dir_15a93f9bacd5c33bdffac32a0655dbd8.html  dir_916b00c1355835c2f1c76765b9f70ca9.html  dir_ab07f19ad6f125efa78bd23589a4ecf9.html  dir_ad7c8da383cdab4be03d583a765a065c.html  dir_cea5766b0578a0c730391ca7f95b08aa.html  dir_f2fee93a9782c3964d0a229d7b7db4d4.html  functions_b.html  functions_func_b.html  functions_func_e.html  functions_func_f.html  functions_func_m.html  functions_func_~.html  functions_h.html  functions_o.html  functions_p.html  topics.html
docs/HephAudio/: Audio.md  AudioBuffer.md  AudioChannelLayout.md  AudioChannelMixingLookupTables.md  AudioDevice.md  AudioFormatInfo.md  AudioObject.md  AudioPlaylist.md  AudioProcessor.md  AudioStream.md  EchoInfo.md  EqualizerInfo.md  HephAudioFramework.md  HephAudioShared.md  Spatializer.md
docs/HephCommon/: Complex.md  ComplexBuffer.md  ConsoleLogger.md  Event.md  EventArgs.md  EventParams.md  EventResult.md  File.md  FloatBuffer.md  Fourier.md  Guid.md  HephCommonShared.md  HephException.md  HephExceptionEventArgs.md  HephMath.md  StopWatch.md  StringHelpers.md  UserEventArgs.md
docs/examples/: Events.md  PlayingFiles.md  Recording.md  UsingOscillators.md  UsingWindows.md
docs/html/: _a_audio_params_8h.html  _a_audio_params_8h_source.html  _alsa_params_8h_source.html  _android_audio_a_8h.html  _android_audio_a_8h_source.html  _android_audio_base_8h.html  _android_audio_base_8h_source.html  _android_audio_s_l_e_s_8h.html  _android_audio_s_l_e_s_8h_source.html  _apple_audio_8h.html  _apple_audio_8h_source.html  _arithmetic_buffer_8h.html  _arithmetic_buffer_8h_source.html  _audio_8h.html  _audio_8h_source.html  _audio_buffer_8h.html  _audio_buffer_8h_source.html  _audio_capture_event_args_8h.html  _audio_capture_event_args_8h_source.html  _audio_channel_layout_8h.html  (+422 more)
test/: test.vcxproj
tutorials/: PlayingFiles.md
(+1409 files in other folders)
